// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnorderedList renders StyledUl with given display prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

<ul
    class="emotion-0"
    display="inline-block"
  >
    first nodesecond nodethird node
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders default StyledUl 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

<ul
    class="emotion-0"
  >
    first nodesecond nodethird node
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders different types of children 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-10 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-10 svg {
  fill: #0a68c1;
}

.emotion-10:hover:not(:disabled) {
  color: #02509b;
}

.emotion-10:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-10:active:not(:disabled) {
  color: #01396e;
}

.emotion-10:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-10:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-10:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-10 {
    vertical-align: text-bottom;
  }
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-12 {
    max-width: 100%;
  }
}

.emotion-13 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

.emotion-15 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-15.emotion-15 {
  width: 16px;
  height: 16px;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          String node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          100
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          <a
            class="emotion-10"
            href="http://localhost:6006"
          >
            <span
              class="emotion-11"
            >
              <span
                class="emotion-12"
              >
                <span
                  class="emotion-13"
                >
                  Link component
                </span>
              </span>
              <span
                class="emotion-12"
              >
                <svg
                  class="emotion-15 emotion-16"
                  fill="currentColor"
                  focusable="false"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    External link
                  </title>
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </span>
            </span>
          </a>
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with custom list item marker 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #2e2e2e;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 8px;
  height: 8px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with custom list item marker with different size 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #2e2e2e;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 16px;
  height: 16px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with defaults 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with defaults when marker is incorrect 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <p
          class="emotion-3"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
